# aurora-engine-migration-tool

./: .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain
.github/workflows/: builds.yml  lints.yml
scripts/: deposit_proof_data.json  init_eth_connector.json  test_flow.sh
src/: indexer.rs  lib.rs  main.rs  migration.rs  parser.rs  rpc.rs  tests.rs
