[package]
name = "aurora-engine-migration-tool"
version = "0.1.0"
authors = ["Aurora Labs <hello@aurora.dev>", "Evgeny Ukhanov <evgeny@aurora.dev>"]
edition = "2021"
description = "Aurora Engine migration tools"
documentation = ""
readme = true
homepage = "https://github.com/aurora-is-near/aurora-engine-migration-tool"
repository = "https://github.com/aurora-is-near/aurora-engine-migration-tool"
license = "CC0 1.0"
publish = false
autobenches = false

[dependencies]
aurora-engine-types = { git = "https://github.com/aurora-is-near/aurora-engine.git", tag = "2.9.0", default-features = false, features = ["borsh-compat"] }
serde = "1"
serde_json = "1"
serde_derive = "1"
base64 = "0.13"
near-jsonrpc-client = "0.5.1"
near-jsonrpc-primitives = "0.16.1"
near-primitives = "0.16.1"
near-sdk = "4.1"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.0", features = ["cargo"] }
near-crypto = "0.16.1"
libc = "0.2"

[features]
mainnet = ["log"]
testnet = ["log"]
mainnet-archival = ["log"]
log = []
