[package]
name = "aurora-engine-migration-tool"
version = "0.2.2"
authors = ["Aurora Labs <hello@aurora.dev>", "Evgeny Ukhanov <evgeny@aurora.dev>"]
edition = "2021"
description = "Aurora Engine migration tools"
documentation = ""
readme = true
homepage = "https://github.com/aurora-is-near/aurora-engine-migration-tool"
repository = "https://github.com/aurora-is-near/aurora-engine-migration-tool"
license = "CC0 1.0"
publish = false
autobenches = false

[dependencies]
aurora-engine-types = { git = "https://github.com/aurora-is-near/aurora-engine.git", tag = "3.5.0", default-features = false, features = ["borsh-compat"] }
serde = "1"
serde_json = "1"
serde_derive = "1"
base64 = "0.20"
near-jsonrpc-client = "0.6"
near-jsonrpc-primitives = "0.17"
near-primitives = "0.17"
near-sdk = "4.1"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.0", features = ["cargo"] }
near-crypto = "0.17"
libc = "0.2"

[features]
mainnet = ["log"]
testnet = ["log"]
localnet = ["log"]
mainnet-archival = ["log"]
log = []

[patch.crates-io]
parity-secp256k1 = { git = 'https://github.com/paritytech/rust-secp256k1', rev = "d05fd8e" }
