[package]
name = "aurora-engine-migration-tool"
version = "0.2.2"
authors = ["Aurora Labs <hello@aurora.dev>", "Evgeny Ukhanov <evgeny@aurora.dev>"]
edition = "2021"
description = "Aurora Engine migration tools"
documentation = ""
readme = true
homepage = "https://github.com/aurora-is-near/aurora-engine-migration-tool"
repository = "https://github.com/aurora-is-near/aurora-engine-migration-tool"
license = "CC0 1.0"
publish = false
autobenches = false

[dependencies]
aurora-engine-types = { git = "https://github.com/aurora-is-near/aurora-engine.git", tag = "3.6.2", default-features = false }
serde = "1"
serde_json = "1"
serde_derive = "1"
base64 = "0.20"
near-jsonrpc-client = "0.8"
near-jsonrpc-primitives = "0.20"
near-primitives = "0.20"
near-sdk = "5"
borsh = { version = "1", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.0", features = ["cargo"] }
near-crypto = "0.20"
libc = "0.2"

[features]
mainnet = ["log"]
testnet = ["log"]
localnet = ["log"]
mainnet-archival = ["log"]
log = []

[patch.crates-io]
parity-secp256k1 = { git = 'https://github.com/paritytech/rust-secp256k1', rev = "d05fd8e" }
near-sdk = { git = "https://github.com/aurora-is-near/near-sdk-rs.git", tag = "v4.1.1-fix-deps" }
